Align MVP taxonomy catalog defaults (#37)